fix: stabilize auth and business regression flows